<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Login, Account, Appname -->
    <string name="app_name">Doggo</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email..</string>
    <string name="password">Password..</string>
    <string name="repeat_password">Repeat password..</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_maps">Map</string>


    <!-- AddPetFragment -->
    <string name="add_pet_name">Name</string>
    <string name="add_pet_breed">Breed</string>
    <string name="add_pet_age">Age</string>
    <string name="add_pet_height">Height</string>
    <string name="add_pet_weight">Weight</string>
    <string name="add_pet_create_dog">Create Dog</string>
    <string name="add_pet_neutered">Neutered:</string>
    <string name="add_pet_male">Male</string>
    <string name="add_pet_female">Female</string>
    <string name="add_pet_year">years</string>
    <string name="add_pet_cm">cm</string>
    <string name="add_pet_kg">kg</string>

    <string name="gender">Gender:</string>

    <!-- item_list -->
    <string name="owner">Owner:</string>
    <string name="phone_nr">Phone Nr:</string>


    <!-- DogAdapter -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- For the visually impaired -->
    <string name="content_description_paw">Dog paw</string>
    <string name="nav_open">Navigation open</string>
    <string name="nav_closed">Navigation closed</string>
    <string name="profile_image">Profile image</string>


    <!-- Drawer menu -->
    <string name="map_drawer">Map</string>
    <string name="pets_drawer">My dogs</string>
    <string name="add_pet_drawer">Add dog</string>
    <string name="profile_drawer">Profile</string>
    <string name="sign_out_drawer">Sign out</string>


    <!-- ProfileFragment -->
    <string name="profile_user_name">Username</string>
    <string name="profile_phone_number">Phone number</string>
    <string name="profile_description">Description</string>
    <string name="profile_save_changes">Save Changes</string>
    <string name="profile_picture">Profile picture</string>

</resources>